pkl-core/src/test/files/LanguageSnippetTests/input/errors/moduleExtendsSelf.pkl
open module moduleExtendsSelf

extends "moduleExtendsSelf.pkl"
